# docs/swagger/swagger.yaml
@@ -197,7 +197,7 @@ definitions:
       summary_options:
         $ref: '#/definitions/auth.SummaryConfig'
     type: object
-  bookmarks.ContentDTO:
+  bookmarks.BookmarkContentDTO:
     properties:
       content:
         type: string
@@ -211,10 +211,8 @@ definitions:
         type: string
       id:
         type: string
-      is_favorite:
-        type: boolean
       metadata:
-        $ref: '#/definitions/bookmarks.Metadata'
+        $ref: '#/definitions/bookmarks.BookmarkContentMetadata'
       s3_key:
         type: string
       summary:
@@ -234,9 +232,68 @@ definitions:
       user_id:
         type: string
     type: object
-  bookmarks.ContentShareDTO:
+  bookmarks.BookmarkContentMetadata:
+    properties:
+      author:
+        type: string
+      cover:
+        type: string
+      description:
+        type: string
+      domain:
+        type: string
+      favicon:
+        type: string
+      image:
+        type: string
+      published_at:
+        type: string
+      site_name:
+        type: string
+    type: object
+  bookmarks.BookmarkDTO:
     properties:
       content_id:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      is_archive:
+        type: boolean
+      is_favorite:
+        type: boolean
+      is_public:
+        type: boolean
+      metadata:
+        $ref: '#/definitions/bookmarks.BookmarkMetadata'
+      reading_progress:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
+  bookmarks.BookmarkMetadata:
+    properties:
+      highlights:
+        items:
+          $ref: '#/definitions/bookmarks.Highlight'
+        type: array
+      last_read_at:
+        type: string
+      reading_progress:
+        type: integer
+      share:
+        $ref: '#/definitions/bookmarks.BookmarkShareDTO'
+    type: object
+  bookmarks.BookmarkShareDTO:
+    properties:
+      bookmark_id:
         type: string
       created_at:
         type: string
@@ -244,6 +301,35 @@ definitions:
         type: string
       id:
         type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
+  bookmarks.BookmarkWithContentDTO:
+    properties:
+      content:
+        $ref: '#/definitions/bookmarks.BookmarkContentDTO'
+      content_id:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      is_archive:
+        type: boolean
+      is_favorite:
+        type: boolean
+      is_public:
+        type: boolean
+      metadata:
+        $ref: '#/definitions/bookmarks.BookmarkMetadata'
+      reading_progress:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
       updated_at:
         type: string
       user_id:
@@ -288,35 +374,6 @@ definitions:
         type: integer
       text:
         type: string
-    type: object
-  bookmarks.Metadata:
-    properties:
-      author:
-        type: string
-      cover:
-        type: string
-      description:
-        type: string
-      domain:
-        type: string
-      favicon:
-        type: string
-      highlights:
-        items:
-          $ref: '#/definitions/bookmarks.Highlight'
-        type: array
-      image:
-        type: string
-      published_at:
-        type: string
-      share:
-        $ref: '#/definitions/bookmarks.ContentShareDTO'
-      site_name:
-        type: string
-      tags:
-        items:
-          type: string
-        type: array
     type: object
   bookmarks.TagDTO:
     properties:
@@ -393,7 +450,7 @@ definitions:
       html:
         type: string
       metadata:
-        $ref: '#/definitions/bookmarks.Metadata'
+        $ref: '#/definitions/bookmarks.BookmarkContentMetadata'
       tags:
         items:
           type: string
@@ -445,7 +502,7 @@ definitions:
     properties:
       bookmarks:
         items:
-          $ref: '#/definitions/bookmarks.ContentDTO'
+          $ref: '#/definitions/bookmarks.BookmarkDTO'
         type: array
       limit:
         type: integer
@@ -528,7 +585,7 @@ definitions:
       html:
         type: string
       metadata:
-        $ref: '#/definitions/bookmarks.Metadata'
+        $ref: '#/definitions/bookmarks.BookmarkContentMetadata'
       summary:
         type: string
     required:
@@ -2194,7 +2251,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkDTO'
               type: object
         "400":
           description: Bad Request
@@ -2299,7 +2356,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkWithContentDTO'
               type: object
         "400":
           description: Bad Request
@@ -2366,7 +2423,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkDTO'
               type: object
         "400":
           description: Bad Request
@@ -2434,7 +2491,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkDTO'
               type: object
         "400":
           description: Bad Request
@@ -2539,7 +2596,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkContentDTO'
               type: object
         "400":
           description: Bad Request
@@ -2597,7 +2654,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkShareDTO'
               type: object
         "400":
           description: Bad Request
@@ -2664,7 +2721,7 @@ paths:
             - $ref: '#/definitions/httpserver.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/bookmarks.ContentDTO'
+                  $ref: '#/definitions/bookmarks.BookmarkShareDTO'
               type: object
         "400":
           description: Bad Request
